[tool.poetry]
name = "cloudf-pubsub-schedule-python"
version = "0.1.0"
description = ""
authors = ["Runacy <orcinusorca1758dv6932@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
google-cloud-secret-manager = "^2.8.0"
pandas = "^1.4.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
